Fix -Wc++11-narrowing on unsigned char platforms like FreeBSD/aarch64 https://bugs.webkit.org/show_bug.cgi?id=197148

Patch by Greg V <greg@unrelenting.technology> on 2019-04-24
Reviewed by Alex Christensen.

* contentextensions/DFACombiner.cpp:
* contentextensions/NFAToDFA.cpp:

Canonical link: https://commits.webkit.org/211451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244591 268f45cc-cd09-0410-ab3c-d52691b4dbfc